@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-03T01:25:25Z",
-  "count_outdated" : 1869,
-  "uniques_outdated" : 1108,
-  "count" : 1884,
-  "uniques" : 1123,
+  "timestamp" : "2025-07-04T01:25:01Z",
+  "count_outdated" : 1870,
+  "uniques_outdated" : 1109,
+  "count" : 1885,
+  "uniques" : 1124,
   "clones" : [
-    {
-      "timestamp": "2025-06-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-06-21T00:00:00Z",
       "count": 1,
@@ -103,6 +94,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-07-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
