@@ -1,12 +1,7 @@
 {
   "count": 15,
-  "uniques": 8,
+  "uniques": 9,
   "clones": [
-    {
-      "timestamp": "2025-06-20T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-06-21T00:00:00Z",
       "count": 1,
@@ -56,6 +51,11 @@
       "timestamp": "2025-07-02T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-07-03T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
